# open-modbus-proxy

./: Cargo.toml  README.md
src/: main.rs
